--- a/assets/client/package.json
+++ b/assets/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
